gcc/testsuite/rust/compile/issue-3618.rs
static _X : ()
	    = loop{}; // { dg-error "'loop' is not allowed in const context" }
